@@ -99,7 +99,11 @@ Other changes in Shorewall 4.0.0 Beta 5.
 	       configuration is compiled into the named file.
 
 	       Compilation errors cause the compiler to raise an exception via
-	       die. 
+	       die.
+
+	       Important: Currently, the 'compiler' function may only
+	       be called once in a process. I'll work on removing that
+	       restriction but that isn't a high priority for me.
 
 Migration Considerations:
 
